turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:21: error: Missing closing brace `}' assumed here
}
^